--- a/app/src/main/res/layout/news_fragment.xml
+++ b/app/src/main/res/layout/news_fragment.xml
@@ -6,38 +6,40 @@
                 android:orientation="vertical"
     >
 
-    <com.bawei.swiperefreshlayoutlibrary.SwipyRefreshLayout
+
+    <RelativeLayout
+        android:id="@+id/vp_container"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"/>
+
+        <LinearLayout
+            android:id="@+id/ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/vp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"></LinearLayout>
+
+    </RelativeLayout>
+
+    <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipy"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <RelativeLayout
-            android:id="@+id/vp_container"
-            android:layout_width="match_parent"
-            android:layout_height="200dp">
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/vp"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"/>
-
-            <LinearLayout
-                android:id="@+id/ll"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/vp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="20dp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"></LinearLayout>
-
-        </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/vp_container">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rev_news"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/vp_container"
             />
-    </com.bawei.swiperefreshlayoutlibrary.SwipyRefreshLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </RelativeLayout>
